--- a/sections/products-slider-full.liquid
+++ b/sections/products-slider-full.liquid
@@ -8,7 +8,7 @@
   <div class="relative">
     <div class="absolute opacity-60 top-8 left-1/2 -translate-x-1/2 lg:w-[33vw] lg:h-[33vw] w-1/2 h-1/2 rounded-full shadow-[0px -10px 5px 3px #ededed] bg-gradient-to-b via-white from-white to-transparent"></div>
     <div class="relative" 
-    data-flickity='{"wrapAround": "true","draggable": true,"selectedAttraction": 0.01,"friction": 0.15, "imagesLoaded": true }'>
+    hb-flickity='{"wrapAround": "true","draggable": true,"selectedAttraction": 0.01,"friction": 0.15, "imagesLoaded": true }'>
       {% for block in section.blocks %}
       <div class="page-width opacity-30 transition-opacity duration-700 delay-300" >
         {%- assign product = block.settings.product -%}
