--- a/sections/accordion.liquid
+++ b/sections/accordion.liquid
@@ -28,7 +28,7 @@
                       {% if blkSt.slide_w == "25%" %} {% assign wClass = "md:w-1/4 w-1/2" %} {% else %} {% assign wClass = "w-full" %} {% endif %}
                       <div class="{{ wClass }} md:mb-8 mb-6 ">
                         <p class="m-0 font-semibold">{{title}}</p>
-                        <p class="m-0">{{content}}</p>
+                        <p class="m-0">{{content | newline_to_br }}</p>
                       </div>
                     {% endfor %}
                   </div>
