--- a/sections/color-slider-full.liquid
+++ b/sections/color-slider-full.liquid
@@ -1,4 +1,6 @@
 {%- assign secSt = section.settings -%}
+
+
 <section section-name="color-slider-full" class="{% render 'section-interva-set' , secSt:secSt %}" style="background-color: {{secSt.bg_color}};">
   <div class="page-width text-center ">
     <h1 class="md:text-4_5xl text-3xl mb-2">{{secSt.title}}</h1> 
@@ -22,19 +24,19 @@
 
 
     <div class="rounded-full bg-white py-2 px-4 {{switchW}} mx-auto shadow-sm">
-      <div tag-name="color-carousel" data-flickity='{"draggable": false, "asNavFor": "#carousel-main-{{section.id}}", "contain": true, "pageDots": false, "prevNextButtons": false}'>
+      <div tag-name="color-carousel" hb-flickity='{"draggable": false, "asNavFor": "#carousel-main-{{section.id}}", "contain": true, "pageDots": false, "prevNextButtons": false}'>
         {% for block in section.blocks %}
           <div class="cursor-pointer relative rounded-full md:mx-1 mx-4 w-7 h-7 border-solid border border-black-800" style="background-color:{{block.settings.color}}" >
-            <svg class="p-1 hidden absolute top-0 left-0 h-full w-full" t="1684988114041" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2132" width="16" height="16"><path d="M825.768 376.016 825.768 376.016 475.889 731.658l0 0c-8.265 8.395-19.68 13.595-32.287 13.595-12.607 0-24.022-5.2-32.29-13.595l0 0L213.584 530.629l0 0c-8.26-8.355-13.372-19.96-13.372-32.775 0-25.63 20.442-46.372 45.617-46.372 12.607 0 24.027 5.195 32.292 13.592l0 0 165.48 168.17 317.637-322.864 0 0c8.265-8.355 19.68-13.552 32.285-13.552 25.17 0 45.625 20.78 45.625 46.367C839.148 356.012 834.033 367.619 825.768 376.016L825.768 376.016 825.768 376.016z" fill="#272636" p-id="2133"></path></svg>
+            <svg class="p-1 hidden absolute top-0 left-0 h-full w-full" t="1684988114041" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2132" width="16" height="16"><path d="M825.768 376.016 825.768 376.016 475.889 731.658l0 0c-8.265 8.395-19.68 13.595-32.287 13.595-12.607 0-24.022-5.2-32.29-13.595l0 0L213.584 530.629l0 0c-8.26-8.355-13.372-19.96-13.372-32.775 0-25.63 20.442-46.372 45.617-46.372 12.607 0 24.027 5.195 32.292 13.592l0 0 165.48 168.17 317.637-322.864 0 0c8.265-8.355 19.68-13.552 32.285-13.552 25.17 0 45.625 20.78 45.625 46.367C839.148 356.012 834.033 367.619 825.768 376.016L825.768 376.016 825.768 376.016z" fill="#F8BE00" p-id="2133"></path></svg>
           </div>
         {% endfor %}
       </div>
-    </div> 
+    </div>
 
     <div id="carousel-main-{{section.id}}" class="md:-mt-2 mt-8" 
-      data-flickity='{"draggable": false,"pageDots": false, "fade": true, "prevNextButtons": false, "lazyLoad": true}'> 
+      hb-flickity='{"draggable": false,"pageDots": false, "fade": true, "prevNextButtons": false,"imagesLoaded": true}'> 
       {% for block in section.blocks %}
-        <div class='!transition-all'>{{ block.settings.image | image_url: width: 1000 | image_tag: width: nil }}</div>
+        <div class='!transition-all'>{{ block.settings.image | image_url: width: 1920 | image_tag: width: 1920 }}</div>
       {% endfor %}
     </div>
   </div>
