--- a/sections/products-slider-full.liquid
+++ b/sections/products-slider-full.liquid
@@ -6,7 +6,7 @@
   </div>
 
   <div class="relative">
-    <div class="absolute opacity-60 top-8 left-1/2 -translate-x-1/2 lg:w-[33vw] lg:h-[33vw] w-1/2 h-1/2 rounded-full shadow-[0px -10px 5px 3px #ededed] bg-gradient-to-b via-white from-white to-transparent"></div>
+    <div class="absolute opacity-60 top-8 left-1/2 -translate-x-1/2 lg:w-[33vw] lg:h-[33vw] w-1/2 h-[50vw] rounded-full shadow-[0px -10px 5px 3px #ededed] bg-gradient-to-b via-white from-white to-transparent"></div>
     <div class="relative" 
     hb-flickity='{"wrapAround": "true","draggable": true,"selectedAttraction": 0.01,"friction": 0.15, "imagesLoaded": true }'>
       {% for block in section.blocks %}
@@ -16,7 +16,7 @@
         <div tag-name="product-info" class="md:absolute relative md:mb-0 mb-8 left-4 top-4 opacity-0 transition-opacity duration-300 delay-700 w-full z-20">
           <div class="">
             <h2 class="lg:text-3_5xl md:text-3xl text-2xl mb-1">{{ product.title }}</h2>
-            <p class="md:text-1_5xl text-lg md:mb-12 mb-2 text-black-600">{{block.settings.info}}</p>
+            <p class="md:text-1_5xl text-lg xl:mb-12 lg:mb-8 md:mb-4 mb-2 text-black-600">{{block.settings.info}}</p>
             <div class="flex items-center">
               <a href="{{ product.url }}" class="btn text-base py-1 md:px-5 px-3"> {{ section.settings.btn_Text }} </a>
               <p class="text-xl ml-4 font-medium">{{ product.price | money}}</p>
@@ -30,9 +30,10 @@
 
         </div>
           {% if block.settings.product_image %}
-          <div class='scale-90 transition-all duration-700 delay-300' tag-name="product-img">{{ block.settings.product_image | image_url: width: 1920 | image_tag: width: nil }}</div>
+          {% assign imgWapClass = 'scale-90 transition-all duration-700 delay-300 xl:mt-0 lg:mt-12 md:mt-20' %}
+          <div class='{{imgWapClass}}' tag-name="product-img">{{ block.settings.product_image | image_url: width: 1920 | image_tag: width: nil }}</div>
           {% else %}
-          <div class='scale-90 transition-all duration-700 delay-300' tag-name="product-img">{{ product.featured_image | image_url: width: 1920 | image_tag: width: nil }}</div>
+          <div class='{{imgWapClass}}' tag-name="product-img">{{ product.featured_image | image_url: width: 1920 | image_tag: width: nil }}</div>
           {% endif %}
         
         {% endif %}
