--- a/assets/custom.css
+++ b/assets/custom.css
@@ -177,6 +177,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   border-top-width:0px !important;
 }
 
+.zoomImg {
+  --tw-bg-opacity:1 !important;
+  background-color:rgb(255 255 255 / var(--tw-bg-opacity)) !important;
+}
+
 @media only screen and (max-width:765px) {
   .pr_thumbs_item {
     margin-left:0.3%;
@@ -606,10 +611,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   margin-bottom:1.5rem;
 }
 
-.mb-7 {
-  margin-bottom:1.75rem;
-}
-
 .mb-8 {
   margin-bottom:2rem;
 }
@@ -678,12 +679,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   display:inline;
 }
 
-.flex {
-  display:flex;
-}
-
 .\!flex {
   display:flex !important;
+}
+
+.flex {
+  display:flex;
 }
 
 .table {
@@ -706,10 +707,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   height:2.75rem !important;
 }
 
-.h-1\/2 {
-  height:50%;
-}
-
 .h-14 {
   height:3.5rem;
 }
@@ -724,6 +721,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .h-80 {
   height:20rem;
+}
+
+.h-\[50vw\] {
+  height:50vw;
 }
 
 .h-full {
@@ -956,6 +957,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   background-color:transparent !important;
 }
 
+.bg-black-700 {
+  --tw-bg-opacity:1;
+  background-color:rgb(68 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-black-800 {
   --tw-bg-opacity:1;
   background-color:rgb(34 34 34 / var(--tw-bg-opacity));
@@ -979,11 +985,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .bg-white {
   --tw-bg-opacity:1;
   background-color:rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-black-700 {
-  --tw-bg-opacity:1;
-  background-color:rgb(68 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1034,20 +1035,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   padding:0.5rem;
 }
 
+.p-3 {
+  padding:0.75rem;
+}
+
 .p-4 {
   padding:1rem;
 }
 
 .p-8 {
   padding:2rem;
-}
-
-.p-6 {
-  padding:1.5rem;
-}
-
-.p-3 {
-  padding:0.75rem;
 }
 
 .\!py-2 {
@@ -1103,16 +1100,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .py-4 {
   padding-top:1rem;
   padding-bottom:1rem;
-}
-
-.py-6 {
-  padding-top:1.5rem;
-  padding-bottom:1.5rem;
-}
-
-.py-5 {
-  padding-top:1.25rem;
-  padding-bottom:1.25rem;
 }
 
 .pb-0 {
@@ -1692,6 +1679,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     padding-right:3rem;
   }
 
+  .md\:px-4 {
+    padding-left:1rem;
+    padding-right:1rem;
+  }
+
   .md\:px-5 {
     padding-left:1.25rem;
     padding-right:1.25rem;
@@ -1717,19 +1709,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     padding-bottom:0.75rem;
   }
 
-  .md\:py-6 {
-    padding-top:1.5rem;
-    padding-bottom:1.5rem;
-  }
-
-  .md\:px-4 {
-    padding-left:1rem;
-    padding-right:1rem;
-  }
-
   .md\:py-5 {
     padding-top:1.25rem;
     padding-bottom:1.25rem;
+  }
+
+  .md\:py-6 {
+    padding-top:1.5rem;
+    padding-bottom:1.5rem;
   }
 
   .md\:pb-0 {
@@ -1842,20 +1829,20 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 }
 
 @media (min-width: 1024px) {
-  .lg\:mt-24 {
-    margin-top:6rem;
+  .lg\:mb-12 {
+    margin-bottom:3rem;
   }
 
   .lg\:mb-8 {
     margin-bottom:2rem;
   }
 
-  .lg\:mb-12 {
-    margin-bottom:3rem;
+  .lg\:mt-12 {
+    margin-top:3rem;
   }
 
-  .lg\:mb-16 {
-    margin-bottom:4rem;
+  .lg\:mt-24 {
+    margin-top:6rem;
   }
 
   .lg\:flex {
@@ -1930,12 +1917,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     margin-bottom:3rem;
   }
 
-  .xl\:mb-16 {
-    margin-bottom:4rem;
-  }
-
   .xl\:mb-20 {
     margin-bottom:5rem;
+  }
+
+  .xl\:mt-0 {
+    margin-top:0px;
   }
 
   .xl\:w-1\/6 {
