--- a/sections/data-statistics.liquid
+++ b/sections/data-statistics.liquid
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="border-0 border-l-[.5rem] border-solid border-white md:w-[38%]">
-        <img class="h-full object-cover block" src="{{ secSt.image | image_url: master }}">
+        <img class="h-full object-cover block w-full" src="{{ secSt.image | image_url: master }}">
       </div>
     </div>
   </div>
