--- a/assets/custom.css
+++ b/assets/custom.css
@@ -707,6 +707,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   height:2.75rem !important;
 }
 
+.h-11 {
+  height:2.75rem;
+}
+
 .h-14 {
   height:3.5rem;
 }
@@ -725,6 +729,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .h-\[50vw\] {
   height:50vw;
+}
+
+.h-auto {
+  height:auto;
 }
 
 .h-full {
@@ -753,6 +761,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .w-1\/3 {
   width:33.333333%;
+}
+
+.w-11 {
+  width:2.75rem;
 }
 
 .w-16 {
@@ -1678,11 +1690,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     padding-right:0px;
   }
 
-  .md\:px-12 {
-    padding-left:3rem;
-    padding-right:3rem;
-  }
-
   .md\:px-4 {
     padding-left:1rem;
     padding-right:1rem;
@@ -1867,6 +1874,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .lg\:w-\[33vw\] {
     width:33vw;
+  }
+
+  .lg\:px-12 {
+    padding-left:3rem;
+    padding-right:3rem;
   }
 
   .lg\:pb-14 {
