--- a/sections/multiple-image-text.liquid
+++ b/sections/multiple-image-text.liquid
@@ -6,7 +6,7 @@
   <div class="page-width px-4">
     <h1 class="md:text-4_5xl text-3xl text-center md:mb-12 mb-8">{{secSt.title}}</h1>
 
-    <div {% if ebSlider %}hb-flickity='{"pageDots": false, "draggable": false, "imagesLoaded": true,"wrapAround":true }' {% else %} class="md:flex"{% endif %} >
+    <div {% if ebSlider %}data-flickity='{"pageDots": false, "draggable": false, "imagesLoaded": true,"wrapAround":true }' {% else %} class="md:flex"{% endif %} >
       {% for block in section.blocks %}
       {%- assign blkSt = block.settings -%}
 
@@ -15,18 +15,18 @@
       {% if secSt.layout == 'textImg' %}{% assign textImg = true %} {% else %} {% assign textImg = false %} {% endif %}
       {% if forloop.length < 3 %} {% assign rounded = 'md:rounded-section' %} {% else %} {% assign rounded = '' %} {% endif %}
 
-      <div class="md:{{blkSt.slide_w}} {% unless ebSlider %}md:mx-3 last:mr-0 first:ml-0 {% endunless %} flex flex-col md:m-0 mb-8  relative">  
+      <div class="md:{{blkSt.slide_w}} w-full {% unless ebSlider %}md:mx-3 last:mr-0 first:ml-0 {% endunless %} flex flex-col md:m-0 mb-8  relative">  
         <div class="{{rounded}} rounded-3xl overflow-hidden h-full {% if ebSlider %}mx-2{% endif %} {% unless textImg %}md:mb-6 mb-2{% endunless %}"
           style="background-color:{{blkSt.bg_color}};">
 
         {% case block.type %} 
           {% when "image" %}
-            {% assign imgClass = 'h-full object-cover block w-full' %}
+            {% assign imgClass = 'h-full object-cover block w-full h-auto' %}
             {% if blkSt.img_link != blank %} 
-            {% assign imgClass = 'h-full object-cover block w-full enlarge' %}
+            {% assign imgClass = 'h-full object-cover block w-full enlarge h-auto' %}
             <a href="{{ blkSt.img_link }}" > 
             {% endif %}
-              {{ blkSt.bg_img | image_url: width: 1000 | image_tag: width: 1000,  class: imgClass  }}
+              {{ blkSt.bg_img | image_url: width: 1000 | image_tag: class: imgClass, lazyload: true  }}
             {% if blkSt.img_link != blank %} </a> {% endif %}
           {% else %}
             <div class="video-wrapper"><iframe src="//www.youtube.com/embed/{{ blkSt.video_url.id }}?rel=0&showinfo=0&vq=720" width="850" height="480" frameborder="0" allowfullscreen></iframe></div>
