--- a/sections/products-slider-full.liquid
+++ b/sections/products-slider-full.liquid
@@ -8,7 +8,7 @@
   <div class="relative">
     <div class="absolute opacity-60 top-8 left-1/2 -translate-x-1/2 lg:w-[33vw] lg:h-[33vw] w-1/2 h-[50vw] rounded-full shadow-[0px -10px 5px 3px #ededed] bg-gradient-to-b via-white from-white to-transparent"></div>
     <div class="relative" 
-    hb-flickity='{"wrapAround": "true","draggable": true,"selectedAttraction": 0.01,"friction": 0.15, "imagesLoaded": true }'>
+    data-flickity='{"wrapAround": "true","draggable": true,"selectedAttraction": 0.01,"friction": 0.15, "imagesLoaded": true }'>
       {% for block in section.blocks %}
       <div class="page-width opacity-30 transition-opacity duration-700 delay-300" >
         {%- assign product = block.settings.product -%}
@@ -31,9 +31,15 @@
         </div>
           {% if block.settings.product_image %}
           {% assign imgWapClass = 'scale-90 transition-all duration-700 delay-300 xl:mt-0 lg:mt-12 md:mt-20' %}
-          <div class='{{imgWapClass}}' tag-name="product-img">{{ block.settings.product_image | image_url: width: 1920 | image_tag: width: nil }}</div>
+          {% assign media = block.settings.product_image %}
+          <div class='{{imgWapClass}}' tag-name="product-img">
+            {{ media | image_url: width: 1920 | image_tag: width: media.width, height: media.height, lazyload: true, class:'h-auto' }}
+          </div>
           {% else %}
-          <div class='{{imgWapClass}}' tag-name="product-img">{{ product.featured_image | image_url: width: 1920 | image_tag: width: nil }}</div>
+          {% assign media = product.featured_image %}
+          <div class='{{imgWapClass}}' tag-name="product-img">
+            {{ media | image_url: width: 1920 | image_tag: width: media.width, height: media.height, lazyload: true, class:'h-auto' }}
+          </div>
           {% endif %}
         
         {% endif %}
@@ -42,6 +48,7 @@
       {% endfor %}
     </div>
   </div>
+
 </section>  
 
 {% schema %}
