--- a/snippets/product-column-img.liquid
+++ b/snippets/product-column-img.liquid
@@ -1,18 +1,20 @@
 {%- capture productTabs -%}
 <div section-name="product-column-img" class="mt-8 rounded-md overflow-hidden border-solid border border-black-300">
-  <div class="md:py-6 md:px-12 py-4 px-4">
+  <div class="md:py-6 lg:px-12 md:px-4 py-4 px-3">
     <ul class="flex text-sm justify-between">
-    {% assign pClass = 'text-center' %}
-      <li class="{{pClass}}"> 
-        {{ block.icon1 | image_url: width :"100px" | image_tag: width:nil, class: "p-2 rounded-full border-solid border border-black-300" }}
+    {% assign liClass = 'text-center flex items-center flex-col' %}
+    {% assign spanClass = 'w-11 h-11 flex items-center justify-center rounded-full border-solid border border-black-300 mb-2' %}
+    
+      <li class="{{liClass}}"> 
+        <span class="{{spanClass}}"> {{ block.icon1 | image_url: width :"100px" | image_tag: width:nil }} </span>
         <p>{{ block.text1 }}</p>
       </li>
-      <li class="{{pClass}}">
-        {{ block.icon2 | image_url: width :"100px" | image_tag: width:nil, class: "p-2 rounded-full border-solid border border-black-300" }}
+      <li class="{{liClass}}">
+        <span class="{{spanClass}}"> {{ block.icon2 | image_url: width :"100px" | image_tag: width:nil }} </span>
         <p>{{ block.text2 }}</p>
       </li>
-      <li class="{{pClass}}">
-        {{ block.icon3 | image_url: width :"100px" | image_tag: width:nil, class: "p-2 rounded-full border-solid border border-black-300" }}
+      <li class="{{liClass}}">
+        <span class="{{spanClass}}"> {{ block.icon3 | image_url: width :"100px" | image_tag: width:nil }} </span>
         <p>{{ block.text3 }}</p>
       </li>
     </ul>
