--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -134,23 +134,23 @@
       </div>  
 
 
-      <div class="md:flex justify-between text-black-400 my-8">
+      <div class="md:flex justify-between text-black-400 mt-10 mb-4 -ml-[30px]">
         {% for block in section.blocks %}     
         {% assign blkSt = block.settings %}
       
         {% case block.type %}
         {% when 'legal' %}
-        <div class="flex items-center justify-between md:mb-0 mb-4">
-          <div class="md:w-auto w-1/3">{{ blkSt.logo_img | image_url: width: 200 | image_tag: width: nil, loading: 'lazy' }} </div>
-          <div class="md:w-auto w-1/3 md:text-left text-center text-sm md:text-base md:ml-12"> <a class="text-black-400" href="{{blkSt.text_link1}}"> {{blkSt.text_link1}} </a> </div>
-          <div class="md:w-auto w-1/3 md:text-left text-center text-sm md:text-base md:ml-12"> <a class="text-black-400" href="{{blkSt.text_link2}}"> {{blkSt.text_link2}} </a> </div>
+        <div class="flex items-center justify-between md:mb-0 mb-4 w-2/5">
+          <div class="md:w-1/2 pl-[30px]">{{ blkSt.logo_img | image_url: width: settings.logo_width | image_tag: width: nil, loading: 'lazy' }} </div>
+          <div class="md:text-left text-center text-sm md:text-base"> <a class="text-black-400" href="{{blkSt.text_link1}}"> {{blkSt.text_link1}} </a> </div>
+          <div class="md:text-left text-center text-sm md:text-base"> <a class="text-black-400" href="{{blkSt.text_link2}}"> {{blkSt.text_link2}} </a> </div>
         </div>     
         {% when'socialicons' %}
         <div id="text-{{ block.id }}" class="socialicons flex items-center">
           <p class="m-0 mr-8">{{blkSt.title}}</p>
           {% render 'social-media', hideLbl: true %}
         </div>
-        {%- endcase -%}                
+        {%- endcase -%}     
 
         {% endfor %}
       </div>
