--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -65,7 +65,7 @@ html { overflow-x:hidden; }
 .flickity-page-dots .dot.is-selected { background-color:{{settings.dotsa}}; }
 	
 .flslieds > .fckSl:not(:first-child) { display:None; }
-.flickity-enabled.is-fade .flickity-slider > * { pointer-events:none; z-index:0; transition:all .3s ease-in-out; }
+.flickity-enabled.is-fade .flickity-slider > * { pointer-events:none; z-index:0; transition:all .1s linear; }
 .flickity-enabled.is-fade .flickity-slider > .is-selected { pointer-events:auto; z-index:1; }
 .flickity-button:hover,.flickity-button:focus{opacity:1 !important;}
 
