--- a/sections/accordion.liquid
+++ b/sections/accordion.liquid
@@ -41,9 +41,9 @@
 
               {%- when "imageGrid" -%}
               {% assign divClass1 = "flex flex-wrap font-semibold" %}
-              {% assign divClass2 = "xl:w-1/6 lg:w-1/4 md:w-1/3 w-1/2" %}
-              {% assign divClass3 = "mx-4 rounded overflow-hidden shadow pb-4" %}
-              {% assign pClass = "text-base h-14 flex items-center leading-tight p-2 mb-2" %}
+              {% assign divClass2 = "xl:w-1/7 lg:w-1/5 md:w-1/3 w-1/2" %}
+              {% assign divClass3 = "mx-2 rounded overflow-hidden shadow mb-4" %}
+              {% assign pClass = "md:text-base text-sm md:h-14 h-10 flex items-center leading-tight p-2 mb-2" %}
               {% assign imgClass = "block max-h-36 mx-auto" %}
                   {%- if product.metafields.custom[blkSt.metafield1] != blank -%}
                   <div class="{{ divClass1 }}">
@@ -52,7 +52,7 @@
                       <div class="{{ divClass2 }}">
                         <div class="{{ divClass3 }}">
                           <p class="{{ pClass }}"> {{image.alt}}</p>
-                          {{ image | image_url: width:500 | image_tag: width:nil, class:imgClass, loading: 'lazy'}}
+                          {{ image | image_url: width:500 | image_tag: height:350, class:imgClass, loading: 'lazy'}}
                         </div>
                       </div>
                     {% endfor %}
