--- a/snippets/localization.liquid
+++ b/snippets/localization.liquid
@@ -5,7 +5,7 @@
     {{ settings.current_flag | image_url: width: 18 | image_tag: loading: 'lazy'}}
   </div>
     <select value=" " onchange="location.href=this.options[this.selectedIndex].value;"
-    class="m-0 !bg-transparent border-none p-0 pl-2 text-base pr-6 bg-none">
+    class="m-0 !bg-transparent border-none p-0 pl-2 text-base pr-6 bg-none transition-all">
       {% for link in linklists[settings.region_menu].links %}
       <option value= "{{ link.url }} "> {{ link.title | split: '[' | first }} </option>
       {% endfor %}
